deps/v8/test/message/fail/class-fields-private-throw-write.out
*%(basename)s:7: TypeError: Cannot write private member #x to an object whose class did not declare it
  setX(o, val) { o.#x = val; }
                      ^
TypeError: Cannot write private member #x to an object whose class did not declare it
    at X.setX (*%(basename)s:7:23)
    at *%(basename)s:10:9